Update GitHub workflows for Android build process and modify backend dependencies

--- a/.github/workflows/publish-frontend-android.yml
+++ b/.github/workflows/publish-frontend-android.yml
@@ -39,6 +39,13 @@ jobs:
         with:
           distribution: 'zulu'
           java-version: '17'
+      - name: Setup Rust
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          targets: aarch64-linux-android, armv7-linux-androideabi, i686-linux-android, x86_64-linux-android
+      - name: Install Android NDK
+        run: |
+          yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --install "ndk;25.2.9519653" "build-tools;34.0.0" "platforms;android-34"
       - name: Setup Bun
         uses: oven-sh/setup-bun@v2
         with:
@@ -47,21 +54,17 @@ jobs:
         run: bun install
       - name: Build Svelte app
         run: bun run build
-      - name: Capacitor update
-        run: bun run cap update
-      - name: Capacitor copy
-        run: bun run cap copy
-      - name: Build app bundle
-        run: cd android && ./gradlew bundleRelease && ./gradlew assembleRelease
-      - name: Upload release bundle
-        uses: actions/upload-artifact@v4
-        with:
-          name: app-release-bundle
-          path: frontend/android/app/build/outputs/bundle/release/*.aab
-          retention-days: 7
+      - name: Build Android app with Tauri
+        run: bun run tauri android build
       - name: Upload release apk
         uses: actions/upload-artifact@v4
         with:
           name: app-release-apk
-          path: frontend/android/app/build/outputs/apk/release/*.apk
+          path: frontend/src-tauri/gen/android/app/build/outputs/apk/universal/release/*.apk
+          retention-days: 7 
+      - name: Upload release bundle
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-release-bundle
+          path: frontend/src-tauri/gen/android/app/build/outputs/bundle/universalRelease/*.aab
           retention-days: 7 
