--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,12 +1,16 @@
 # Etapa de build
 FROM oven/bun:alpine AS builder
+ARG BUILD_API_URL
 ENV NODE_ENV=production
-ENV VITE_API_URL=${VITE_API_URL}
+ENV VITE_API_URL=${BUILD_API_URL}
+
 WORKDIR /app
 COPY package.json bun.lock ./
 RUN bun install
 COPY . .
+RUN echo "VITE_API_URL: $VITE_API_URL"
 RUN bun run build
+
 
 # Etapa de producción
 FROM nginx:alpine
