fix qr generation

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 # Configuración de la base de datos
-DATABASE_URL=postgres://postgres:anarkia41@localhost:5432/pagui
+DATABASE_URL=postgres://postgres:anarkia41@localhost:5432/pk
 
 # Configuración de JWT
 JWT_SECRET=cambiar_por_secreto_seguro
