app style update

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,6 @@
 # Configuración de la base de datos
 DATABASE_URL=postgres://postgres:anarkia41@localhost:5432/pk
+# DATABASE_URL=postgres://postgres:anarkia41@vendemas.iathings.com:5554/pagui
 
 # Configuración de JWT
 JWT_SECRET=cambiar_por_secreto_seguro
