--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.6.7",
     "crypto-js": "^4.2.0",
     "date-fns": "^3.3.1",
+    "html-to-image": "^1.11.13",
     "openid-client": "^6.6.2",
     "tauri-plugin-m3": "^0.2.1"
   },
