--- a/backend/.env
+++ b/backend/.env
@@ -2,6 +2,12 @@
 DATABASE_URL=postgres://postgres:anarkia41@localhost:5432/pagui
 ENCRYPTION_KEY=Pagui41?!
 DATABASE_URL=postgres://postgres:anarkia41@vendemas.iathings.com:5554/pagui
+# Redis local (desarrollo)
+# REDIS_URL=redis://localhost:6379
+# Redis con usuario y contraseña
+# REDIS_URL=redis://username:password@localhost:6379
+REDIS_URL=redis://default:lW1zetVTGumODgfElV54JT92m7KgAnQg@redis-16717.c273.us-east-1-2.ec2.redns.redis-cloud.com:16717
+
 
 # Configuración de JWT
 JWT_SECRET=cambiar_por_secreto_seguro
