--- a/backend/package.json
+++ b/backend/package.json
@@ -27,9 +27,11 @@
     "@elysiajs/cron": "^1.3.0",
     "@elysiajs/swagger": "^1.3.0",
     "bcrypt": "^6.0.0",
+    "bullmq": "^5.58.5",
     "cron": "^4.3.1",
     "date-fns": "^2.30.0",
     "elysia": "^1.3.0",
+    "ioredis": "^5.7.0",
     "jsonwebtoken": "^9.0.2",
     "nanoid": "^5.0.4",
     "pg": "^8.11.3",
@@ -37,6 +39,7 @@
   },
   "devDependencies": {
     "@types/bun": "^1.2.19",
+    "@types/ioredis": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.2",
     "@types/pg": "^8.10.9",
